# RxSweep

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
design/: claude-design-brief.md
design/comps/: index.html
design/design_handoff_dispositions/: CLAUDE_CODE_PROMPT.md  README.md  RxSweep Design Contract.md
design/design_handoff_dispositions/prototype/: RxSweep - Federal Register v6.dc.html
design/design_handoff_federal_register/: CLAUDE_CODE_PROMPT.md  README.md  RxSweep Design Contract.md  theme.tokens.css
design/design_handoff_federal_register/prototype/: RxSweep - Federal Register v5.dc.html
design/styleguide/: index.html
docs/: AUDIT_2026-07-10.md  AUDIT_BRIEF.md  DATA_PROVENANCE.md  DECISIONS.md  DESIGN.md  GOVERNANCE.md  JOURNAL.md  SYSTEM_CARD.md
plans/: 2026-07-09-day1-build.md  2026-07-09-day2-webapp.md  2026-07-09-phase3-ux.md
src/rxsweep/: __init__.py  audit.py  chat.py  cli.py  exports.py  ingest.py  matching.py  pipeline.py  pricing.py  report.py  triage.py
src/rxsweep/sources/: openfda.py
src/rxsweep/templates/: report.html.j2
tests/: test_audit.py  test_chat.py  test_e2e.py  test_exports.py  test_ingest.py  test_live.py  test_matching.py  test_ndc.py  test_pipeline.py  test_pricing.py  test_report.py  test_server.py  test_sources.py  test_triage.py
tests/fixtures/: enforcement_page.json  mini_formulary.csv  ndc_batch.json  shortages_page.json
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.test.ts  api.ts  format.ts  theme.css
(+32 files in other folders)
