[project]
name = "rxsweep"
version = "0.1.0"
description = "Sweep your formulary against FDA recalls, shortages, and discontinued NDCs — governance-first AI for pharmacy informatics"
readme = "README.md"
authors = [
    { name = "Travis-Clement-Dev", email = "Contact@TravisClement.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "typer>=0.26.8",
]

[project.scripts]
rxsweep = "rxsweep.cli:app"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: hits real APIs; excluded by default"]
addopts = "-m 'not live'"
